feat: return candidates via DTO to prevent circular JSON